--- a/pages/admin.html
+++ b/pages/admin.html
@@ -56,7 +56,7 @@
   </style>
 </head>
 <body>
-    <form action="/getAdmin" method="get">
+    <form action="/postAdmin" method="POST">
         <label for="id">Admin ID</label>
         <input type="text" id="adminId" name="adminId">
         <br>
