--- a/pages/admin.html
+++ b/pages/admin.html
@@ -63,7 +63,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Admin Form with File Upload</h2>
+    <h2>Admin Form</h2>
     <form action="/postAdmin" method="POST" enctype="multipart/form-data">
       <label for="adminId">Admin ID</label>
       <input type="text" id="adminId" name="adminId">
